Enjoy toooting! This version includes following improvements and fixes:
- Added following remote instance
- Added set note of followed users