@@ -4,6 +4,7 @@ type AccountContextType = {
   account?: Mastodon.Account
   relationship?: Mastodon.Relationship
   pageMe?: boolean
+  localInstance: boolean
 }
 const AccountContext = createContext<AccountContextType>({} as AccountContextType)
 
