@@ -1,3 +1,4 @@
 toooting愉快！此版本包括以下改进和修复：
 - 新增关注远程实例功能
 - 新增关注用户备注功能
+- 加载远程用户的嘟文
