@@ -1,3 +1,4 @@
 Enjoy toooting! This version includes following improvements and fixes:
 - Added following remote instance
 - Added set note of followed users
+- Best effort load remote user's toots
